--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,19 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
-author-image:   1.jpg
-author-job:     Web Developer
-author-email:   your-email@domain.com # Add your email for contant form.
-author-twitter: artemsheludko_ # Add your twitter account
-about-author:   I am a web developer focusing on front-end development. Always hungry to keep learning.
+author-name:    김태현(TaehyeonKim)
+author-image:   taehyeon.jpg
+author-job:     BackEnd Developer
+author-email:   taehyeonkim.kakao.com # Add your email for contant form.
+author-twitter: none # Add your twitter account
+about-author:   현재 (주)위니텍에서 백앤드 개발자로 소방 관련하여 WAS를 개발하고 있습니다.
 
 # Social settings
-social-twitter:   artemsheludko_
+social-twitter:   
 social-facebook:
-social-github:    artemsheludko
-social-pinterest: artemsheludko
-social-instagram: artemsheludko_
+social-github:    taehyeon3549
+social-pinterest: 
+social-instagram: 
 social-youtube:
 social-vk:   
 social-linkedin:
