--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Welcome to Flexton
-description: Flexton is a responsive and ultra-minimal theme for Jekyll.
+title: Hi, I'm 태현 :D
+description: BackEnd 개발자 김태현의 프로필 입니다~!!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "scrawled-note.tistory.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
 author-name:    김태현(TaehyeonKim)
@@ -24,11 +24,11 @@ social-linkedin:
 # Newsletter
 mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
 
-# Google Analytics
+# Google Analytics 구글 사이트 통계
 google-analytics: # Add your identifier. For example UA-99631805-1
 
-# Comment Section (Disqus)
-disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
+# Comment Section (Disqus) 댓글
+disqus-identifier: 궁금이 # Add your shortname for Disqus Comment. For example mr-brown
 
 # Build settings
 markdown: kramdown
