--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hi, I'm 태현 :D
-description: BackEnd 개발자 김태현의 프로필 입니다~!!
+description: 밝고 긍정적으로 새로운 것에 도전해보자! 힘들겠지만? 오늘도 화이팅!!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "scrawled-note.tistory.com" # the base hostname & protocol for your site, e.g. http://example.com
 
