--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author-image:   taehyeon.jpg
 author-job:     BackEnd Developer
 author-email:   taehyeonkim.kakao.com # Add your email for contant form.
 author-twitter: none # Add your twitter account
-about-author:   현재 (주)위니텍에서 백앤드 개발자로 소방 관련하여 WAS를 개발하고 있습니다.\n밝고 긍정적으로 새로운 것에 도전해보자! 힘들겠지만?\n오늘도 화이팅!!
+about-author:   밝고 긍정적으로 새로운 것에 도전해보자! 힘들겠지만?!
 
 # Social settings
 social-twitter:   
@@ -28,7 +28,7 @@ mailchimp: # Add your MailChimp form identifier. For example - blogenjoyfreedom.
 google-analytics: # Add your identifier. For example UA-99631805-1
 
 # Comment Section (Disqus) 댓글
-disqus-identifier: 궁금이 # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: taehyeon3549 # Add your shortname for Disqus Comment. For example mr-brown
 
 # Build settings
 markdown: kramdown
