기본 설정 완료

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author-name:    김태현(TaehyeonKim)
 author-image:   taehyeon.jpg
 author-job:     BackEnd Developer
 author-email:   taehyeonkim.kakao.com # Add your email for contant form.
-author-twitter: none # Add your twitter account
+author-twitter: # Add your twitter account
 about-author:   밝고 긍정적으로 새로운 것에 도전해보자! 힘들겠지만?!
 
 # Social settings
